--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 @tailwind base;
@@ -99,6 +98,6 @@
   
   .weather-background {
     @apply bg-cover bg-center bg-no-repeat min-h-screen;
-    background-image: url('https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2274&q=80');
+    background-image: url('/back.jpg');
   }
 }
